[#37] Provide CDI integration - Clean-up - JBoss logging provider: SLF4J